# experimental_json_builder

./: CMakeLists.txt  Dockerfile  README.md  run_docker.sh  simdjson.patch
.github/workflows/: c26-build-container.yml
benchmarks/: CMakeLists.txt
benchmarks/competitors/serde/: Cargo.toml  build.rs
benchmarks/competitors/serde/.cargo/: config.toml
benchmarks/competitors/serde/src/: main.rs
benchmarks/serialization/: benchmark_serialization.cpp
benchmarks/simpleparser/: CMakeLists.txt  from_json.hpp  json_parser.hpp
benchmarks/src/: CMakeLists.txt  apple_arm_events.h  benchmark_helper.hpp  benchmark_reflect_serialization.cpp  benchmark_reflect_serialization.hpp  benchmark_reflect_serialization_twitter.cpp  benchmark_reflect_serialization_twitter.hpp  benchmark_serialization.cpp  benchmark_serialization_twitter.cpp  benchmarking_serialization_twitter.cpp  custom_serializer.h  event_counter.h  fast_json_serializer.hpp  fast_json_serializer2.hpp  fast_json_serializer_simpler.hpp  json_escaping.hpp  linux-perf-events.h  nlohmann_twitter_data.hpp  nlohmann_user_profile.hpp  twitter_data.hpp  user_profile.hpp
builder/: toy_builder.cpp
examples/: CMakeLists.txt  demo.cpp  example.cpp  example2.cpp  example3.cpp  example4.cpp
include/simdjson/json_builder/: json_builder.h  json_escaping.h  string_builder.h  universal_formatter.h
prototype_playground/: toy_builder.cpp
src/: CMakeLists.txt  example.cpp  example2.cpp  experimental_json_builder.hpp  from_json.hpp  json_escaping.hpp  json_parser.hpp  json_string_escaping.hpp  json_utils.hpp  meta_utils.hpp  reflection_utils.hpp  simpler_reflection.hpp  string_builder.hpp  toy_builder.cpp  tuple_utils.hpp  universal_formatter_misc.hpp
tests/: CMakeLists.txt  universal_formatter_tests.cpp  user_profile_tests.cpp
